@@ -1,5 +1,10 @@
 2008-06-11  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 393408 -
+	  Exception in ParseInformationUpdaterWorkerThread'.
+
+2008-06-11  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
 	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
 	  MonoDevelop.SourceEditor/SearchWidget.cs: fixed 'Bug 382403 - Find
